src/objects/zkmulti__MCQueued_Customs_Item__c.object
<CustomObject>
    <fields>
        <fullName>zkmulti__Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Approved_Date__c</fullName>
        <label>Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>zkmulti__Currency_Code__c</fullName>
        <label>Currency Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__External_Line_Item_ID__c</fullName>
        <label>External Line Item ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__External_Product_ID__c</fullName>
        <label>External Product ID</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__External_Return_Reason_ID__c</fullName>
        <label>External Return Reason ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__External_Return_Sub_Reason_ID__c</fullName>
        <label>External Return Sub-Reason ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__External_Variant_ID__c</fullName>
        <label>External Variant ID</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Image_URL__c</fullName>
        <label>Image URL (Deprecated)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>zkmulti__Manufacturer_Name__c</fullName>
        <label>Manufacturer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Manufacturer_SKU__c</fullName>
        <label>Manufacturer SKU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Product_Category__c</fullName>
        <label>Product Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Product_Description_Long__c</fullName>
        <label>Product Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zkmulti__Product_Description__c</fullName>
        <label>Product Description (Deprecated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Product_Image_URL__c</fullName>
        <label>Product Image URL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zkmulti__Product_Name__c</fullName>
        <label>Product Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Product_Variant_Name__c</fullName>
        <label>Product Variant Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkmulti__Refund_Deduction__c</fullName>
        <label>Refund Deduction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Rejected_Date__c</fullName>
        <label>Rejected Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>zkmulti__Return_Reason__c</fullName>
        <label>Return Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Wrong Size</fullName>
                </value>
                <value>
                    <fullName>Damaged</fullName>
                </value>
                <value>
                    <fullName>Incorrect Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkmulti__Return_Sub_Reason__c</fullName>
        <label>Return Sub-Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>zkmulti__Return_Reason__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Too Small</fullName>
                </value>
                <value>
                    <fullName>Too Large</fullName>
                </value>
                <value>
                    <fullName>Was not what I expected</fullName>
                </value>
                <value>
                    <fullName>Damaged during shipment</fullName>
                </value>
                <value>
                    <fullName>Product was defective</fullName>
                </value>
                <value>
                    <fullName>I ordered the wrong product</fullName>
                </value>
                <value>
                    <fullName>I was sent the wrong product</fullName>
                </value>
                <value>
                    <fullName>This is not what I wanted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkmulti__Return__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Return</label>
        <referenceTo>zkmulti__MCQueued_Shipment__c</referenceTo>
        <relationshipLabel>Return Lines (Return)</relationshipLabel>
        <relationshipName>Return_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkmulti__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Awaiting Inspection</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkmulti__Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Return Line</label>
    <nameField>
        <displayFormat>Return Line-{0000000}</displayFormat>
        <label>Return Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Return Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>